=head1 NAME

Bric::Changes - Bricolage Changes

=head1 DATE

$LastChangedDate$

=head1 DESCRIPTION

This document lists the Changes to Bricolage introduced with each release.

=head1 VERSION 1.10.8 ()

=head2 Improvements

=head2 Bug Fixes

=head1 VERSION 1.10.7 (2009-03-12)

=head2 Improvements

=over

=item *

The "Save, Save and Stay, and Return" buttons in the Edit Categories screen
of the story profile are moved to the right to better align with the interface
buttons. [Matt Rolf]

=item *

Improved documentation of the C<FTP_UNLINK_BEFORE_MOVE> F<bricolage.conf>
directive with specific reference to SFTP versions. [Alex Krohn]

=item *

Events are now logged using wallclock time rather than transaction start time,
so that multiple events logged in a single transaction can be displayed in the
order they were created, rather than in an arbitrary order. [David]

=item *

C<< Bric::Util::Burner->publish_another >> will now throw an exception if the
document you pass to it is checked out. This is because publishing a story
that's checked out can cause no end of havoc. The solution, as mentioned in
the error message, is to pass C<< published_version => 1 >> when looking for
documents to publish from within templates. [David]

=back

=head3 Bug Fixes

=over

=item *

Fixed a bug where authorization failiures in callbacks could lead to a bogus
error, rather than sending a "Permission Denied" error to the user. Reported
by Matt Rolf (Bug #1362). [David]

=item *

Fixed a div nesting bug which was causing buttons to improperly align
depending on pagination choices. [Matt Rolf]

=item *

Fixed a typo in F<bric_soap> that prevented it from compiling. Reported by
Ashlee Caul. [David]

=item *

Fixed a bug where a publish would appear to fail when no publish jobs were
created (for example, when a story is published to a destination with no
associated servers). Reported by Ashlee Caul. [David]

=item *
