@@ -16,6 +16,17 @@ This document lists the Changes to Bricolage introduced with each release.
 
 =head2 Bug Fixes
 
+=over
+
+=item
+
+Fixed a compatibility issue in Bric::Dist::Action::DTDValidate. Apparently
+C<get_last_error()> was removed from L<XML::LibXML|XML::LibXML> 1.59 "for
+thread-saftey reasons." This change backward-compatible with older versions of
+XML::LibXML. [David]
+
+=back
+
 =head1 VERSION 1.10.7 (2009-03-12)
 
 =head2 Improvements
